--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -989,7 +989,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10292/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6920/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m: 'monkey'"
      ]
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1015,7 +1015,7 @@
      "output_type": "stream",
      "text": [
       "N/A\n",
-      "wet\n"
+      "N/A\n"
      ]
     }
    ],
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1037,10 +1037,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N/A\n"
+     "ename": "KeyError",
+     "evalue": "'fish'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6920/3698141773.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'fish'\u001b[0m\u001b[1;33m]\u001b[0m        \u001b[1;31m# Remove an element from a dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'fish'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'N/A'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# \"fish\" is no longer a key; prints \"N/A\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'fish'"
      ]
     }
    ],
@@ -1069,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1106,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1150,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1177,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1204,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1241,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1256,8 +1260,8 @@
      "output_type": "stream",
      "text": [
       "#1: cat\n",
-      "#2: fish\n",
-      "#3: dog\n"
+      "#2: dog\n",
+      "#3: fish\n"
      ]
     }
    ],
@@ -1278,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1321,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1351,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1368,7 +1372,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10292/1253691622.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6920/1253691622.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -1397,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1441,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1491,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1558,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {
     "id": "58QdX8BLL9hZ"
    },
@@ -1596,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1624,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1650,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1685,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1711,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1736,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1762,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1788,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1802,8 +1806,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.65796453 0.97419701]\n",
-      " [0.51425083 0.83572875]]\n"
+      "[[0.13341783 0.96897111]\n",
+      " [0.22184995 0.43222494]]\n"
      ]
     }
    ],
@@ -1841,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1888,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1924,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1933,7 +1937,17 @@
     "id": "G6lfbPuxL9iJ",
     "outputId": "a225fe9d-2a29-4e14-a243-2b7d583bd4bc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the following rank 2 array with shape (3, 4)\n",
     "a = np.array([[1,2,3,4], [5,6,7,8], [9,10,11,12]])\n",
@@ -1954,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1963,7 +1977,17 @@
     "id": "EOiEMsmNL9iL",
     "outputId": "ab2ebe48-9002-45a8-9462-fd490b467f40"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7 8] (4,)\n",
+      "[[5 6 7 8]] (1, 4)\n",
+      "[[5 6 7 8]] (1, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "row_r1 = a[1, :]    # Rank 1 view of the second row of a  \n",
     "row_r2 = a[1:2, :]  # Rank 2 view of the second row of a\n",
@@ -1975,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1984,7 +2008,19 @@
     "id": "JXu73pfDL9iN",
     "outputId": "6c589b85-e9b0-4c13-a39d-4cd9fb2f41ac"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  6 10] (3,)\n",
+      "\n",
+      "[[ 2]\n",
+      " [ 6]\n",
+      " [10]] (3, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# We can make the same distinction when accessing columns of an array:\n",
     "col_r1 = a[:, 1]\n",
@@ -2005,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2014,7 +2050,16 @@
     "id": "TBnWonIDL9iP",
     "outputId": "c29fa2cd-234e-4765-c70a-6889acc63573"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 5]\n",
+      "[1 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([[1,2], [3, 4], [5, 6]])\n",
     "\n",
@@ -2028,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2037,7 +2082,16 @@
     "id": "n7vuati-L9iR",
     "outputId": "c3e9ba14-f66e-4202-999e-2e1aed5bd631"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2]\n",
+      "[2 2]\n"
+     ]
+    }
+   ],
    "source": [
     "# When using integer array indexing, you can reuse the same\n",
     "# element from the source array:\n",
@@ -2058,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2067,7 +2121,18 @@
     "id": "ehqsV7TXL9iU",
     "outputId": "de509c40-4ee4-4b7c-e75d-1a936a3350e7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a new array from which we will select elements\n",
     "a = np.array([[1,2,3], [4,5,6], [7,8,9], [10, 11, 12]])\n",
@@ -2076,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2085,7 +2150,15 @@
     "id": "pAPOoqy5L9iV",
     "outputId": "f812e29b-9218-4767-d3a8-e9854e754e68"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  6  7 11]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array of indices\n",
     "b = np.array([0, 2, 0, 1])\n",
@@ -2096,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2105,7 +2178,18 @@
     "id": "6v1PdI1DL9ib",
     "outputId": "89f50f82-de1b-4417-e55c-edbc0ee07584"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11  2  3]\n",
+      " [ 4  5 16]\n",
+      " [17  8  9]\n",
+      " [10 21 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Mutate one element from each row of a using the indices in b\n",
     "a[np.arange(4), b] += 10\n",
@@ -2123,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2132,7 +2216,17 @@
     "id": "32PusjtKL9id",
     "outputId": "8782e8ec-b78d-44d7-8141-23e39750b854"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False False]\n",
+      " [ True  True]\n",
+      " [ True  True]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
